# modules/apps/dispatch/dispatch-rest-impl/rest-openapi.yaml
@@ -1,71 +1,71 @@
 components:
-  schemas:
-    Properties:
-      properties:
-        schema:
-          type: string
+    schemas:
+        Properties:
+            properties:
+                schema:
+                    type: string
 info:
-  description:
-    "A Java client JAR is available for use with the group ID 'com.liferay', artifact ID
+    description:
+        "A Java client JAR is available for use with the group ID 'com.liferay', artifact ID
         'com.liferay.dispatch.rest.client', and version '1.0.0'."
-  license:
-    name: "Apache 2.0"
-    url: "http://www.apache.org/licenses/LICENSE-2.0.html"
-  title: ""
-  version: v1.0
+    license:
+        name: "Apache 2.0"
+        url: "http://www.apache.org/licenses/LICENSE-2.0.html"
+    title: ""
+    version: v1.0
 openapi: 3.0.1
 paths:
-  "/company/{companyId}/dispatches":
-    get:
-      parameters:
-        - in: path
-          name: companyId
-          required: true
-          schema:
-            format: int64
-            type: integer
-        - in: query
-          name: page
-          schema:
-            type: integer
-        - in: query
-          name: pageSize
-          schema:
-            type: integer
-      responses:
-        200:
-          content:
-            application/json:
-              schema:
-                type: string
-            application/xml:
-              schema:
-                type: string
-      tags: ["Dispatch"]
-  "/execute/{dispatchId}":
-    post:
-      parameters:
-        - in: path
-          name: dispatchTriggerId
-          required: true
-          schema:
-            format: int64
-            type: integer
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: string
-          application/xml:
-            schema:
-              type: string
-      responses:
-        200:
-          content:
-            application/json:
-              schema:
-                type: string
-            application/xml:
-              schema:
-                type: string
-      tags: ["Dispatch"]
+    "/company/{companyId}/dispatches":
+        get:
+            parameters:
+                - in: path
+                  name: companyId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+                - in: query
+                  name: page
+                  schema:
+                      type: integer
+                - in: query
+                  name: pageSize
+                  schema:
+                      type: integer
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                        application/xml:
+                            schema:
+                                type: string
+            tags: ["Dispatch"]
+    "/execute/{dispatchId}":
+        post:
+            parameters:
+                - in: path
+                  name: dispatchTriggerId
+                  required: true
+                  schema:
+                      format: int64
+                      type: integer
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            type: string
+                    application/xml:
+                        schema:
+                            type: string
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                        application/xml:
+                            schema:
+                                type: string
+            tags: ["Dispatch"]
